{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 7,
  "lineage": "5a70e9ec-8afe-81ed-e224-86db0ea3a648",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "dev_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0658ab4dadaf5a974",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0658ab4dadaf5a974",
            "name": "dev_architect",
            "tags": {
              "Environment": "architect",
              "Name": "dev_architect"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ops_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-00e3e0a2b25eb4504",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-00e3e0a2b25eb4504",
            "name": "ops_architect",
            "tags": {
              "Environment": "architect",
              "Name": "ops_architect"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ops_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0f44c7fc41b8bd8b5",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0f44c7fc41b8bd8b5",
            "name": "ops_bastion",
            "tags": {
              "Environment": "architect",
              "Name": "ops_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-05df881f6cb8c52d1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-05df881f6cb8c52d1",
            "cidr_block": "192.170.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0227af26edcb73f95",
                "cidr_block": "192.170.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05df881f6cb8c52d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064e377a18bdf023f",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "architect",
              "Name": "archi_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dev_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-04550208716900605",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04550208716900605",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0658ab4dadaf5a974",
            "security_group_rule_id": "sgr-04550208716900605",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_architect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ops_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-070bdbd0c9bb2580e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-070bdbd0c9bb2580e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00e3e0a2b25eb4504",
            "security_group_rule_id": "sgr-070bdbd0c9bb2580e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ops_architect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ops_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0d899c030cfaadefc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d899c030cfaadefc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f44c7fc41b8bd8b5",
            "security_group_rule_id": "sgr-0d899c030cfaadefc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ops_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0dede86747d962388",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0dede86747d962388",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f44c7fc41b8bd8b5",
            "security_group_id": "sg-0658ab4dadaf5a974",
            "security_group_rule_id": "sgr-0dede86747d962388",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.dev_architect",
            "data.aws_security_group.ops_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ops_architect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0c20d73f0a3056b2f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c20d73f0a3056b2f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f44c7fc41b8bd8b5",
            "security_group_id": "sg-00e3e0a2b25eb4504",
            "security_group_rule_id": "sgr-0c20d73f0a3056b2f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ops_architect",
            "data.aws_security_group.ops_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ops_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0fd2522f10d2c7baf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fd2522f10d2c7baf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f44c7fc41b8bd8b5",
            "security_group_rule_id": "sgr-0fd2522f10d2c7baf",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ops_bastion"
          ]
        }
      ]
    }
  ]
}